--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
 <title>Biodata</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
 
 <h1>Biodata</h1>
 <pre>Daris Farhan Subagya<br>
-Nama panggilan : Daris
-Umur	       : 16 tahun
-Jenis kelamin  : Laki-laki
-Alamat	       : Jl. Warung bandrek Rt 01/05, kelurahan:Bondongan, kecamatan:Bogor selatan
-Pekerjaan      : Pelajar
-Idola	       : AKB 48 
+<p style="color:red;">This is about me</p>
+Nama panggilan 		: Daris
+Umur	       		: 16 tahun
+Jenis kelamin  		: Laki-laki
+Tempat,Tanggal lahir   	: Bogor,9 Oktober 2002
+Alamat	       		: Jl. Warung bandrek Rt 01/05, kelurahan:Bondongan, kecamatan:Bogor selatan
+Pekerjaan      		: Pelajar
+Idola	       		: AKB 48 
 <img src="With Idola.png" width="250" height="250">
 Hobi	       : Bermain Game
 <img src="Hobi.png" width="250" height="250">
-
+Motto Hidup : <p><i>Jadilah Dirimu dan Kau akan temukan Tujuan Hidupmu</i></p>
 </pre>
 
 </body>
